# Pulperp-Privacy

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: position.py  signal.py  vault.py
backend/app/models/: __init__.py  position.py
backend/app/services/: __init__.py  llm_analyst.py  privacy_engine.py  signal_generator.py  solana_client.py  vault_manager.py
backend/app/utils/: __init__.py  cache.py  helpers.py  logger.py  rate_limiter.py  retry.py
backend/scripts/: keygen.py  run_agent.py
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: index.js  perp.js
frontend/src/router/: index.js
frontend/src/views/: Analytics.vue  Dashboard.vue  Signals.vue  Vault.vue
tests/: test_privacy_engine.py  test_utils.py  test_vault_manager.py
